# Projetfinal

./: Exemple d'utilisation.docx  LICENSE.md  README.md  drone.py  image en fond.py  image_en_fond.py  image_en_fond3D.py  main.py  requirements.txt  setup.cfg  test.py  trajectoire initiale.py  trajectoire_derivee.py
Trajectoire/: obstacles_2D.py  trajectoire_lissee.py  trajectoire_lissee_3D.py
atmospheric_drone/: __init__.py
atmospheric_drone/air/: __init__.py  vent.py
atmospheric_drone/drone/: drone.py
interface_utilisateur/: __init__.py  interface.py  interface_chemin.py  interface_drone.py  interface_points.py
source/: atmospheric_drone.air.rst  atmospheric_drone.drone.rst  atmospheric_drone.rst  conf.py  index.rst
trajectoire/: __init__.py  affichage_trajectoire_2D.py  calculer_trajectoire_lissee_2D.py  derive_et_correction.py  trajectoire_lissee_2D.py
trajectoire/calcul_trajectoire/: __init__.py  affichage_trajectoire.py  calculer_trajectoire_lissee_2D.py  trajectoire_lissee_2D.py  trajectoire_lissee_3D.py
trajectoire/derive_trajectoire/: __init__.py  derive_et_correction.py  test.py  trajectoire initiale.py  trajectoire_derivee.py
trajectoire/graphique/: __init__.py  affichage_trajectoire_2D.py  image_en_fond3D.py  interface_graphique.py
trajectoire/graphique/obstacles/: __init__.py  obstacles_3D.py
trajectoire/obstacles/: obstacles_2D.py
trajectoire_2D/: __init__.py  obstacles_2D.py  trajectoire_lissee_2D.py
trajectoire_3D/: __init__.py  obstacles_3D.py  trajectoire_lissee_3D.py
