[metadata]
name = Projetfinal
version = 0.1
author = Facca Cécilia, Fleury Aurélien, Gruter Florian
description = Ce projet Python vise à calculer et tracer la trajectoire du drone en fonction des points de passage et des conditions atmosphériques
long_description =  Ce programme contient les fonctionnalités suivantes :
    - Permet aux utilisateurs de spécifier les points de passage du drone.
    - Calcule la trajectoire initiale lissée du drone.
    - Calcule la trajectoire déviée par le vent.
    - Calcule la trajectoire finale du drone.
    - Trace la trajectoire initiale, déviée et finale en 2D.
url =
keywords = drone, trajectoire, vent

[options]
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    math
    tkinter
    requests